<resources>
    <string name="app_name">Messenger</string>
    <string name="obs_title_one">Lorem ipsum</string>
    <string name="obs_title_two">Lorem ipsum</string>
    <string name="obs_title_three">Lorem ipsum</string>
    <string name="obs_description_one">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="obs_description_two">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="obs_description_three">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem ipsum</string>
    <string name="lorem_ipsum_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="obs_button">Get started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_nav_messages">Messages</string>
    <string name="mobile_nav_contacts">Contacts</string>
    <string name="mobile_nav_groups">Groups</string>
    <string name="mobile_nav_profile">Profile</string>
    <string name="tab_one_contacts">All</string>
    <string name="tab_two_contacts">Online</string>
    <string name="tab_three_contacts">Request</string>
    <string name="tab_one_groups">All</string>
    <string name="tab_two_groups">My</string>
    <string name="tab_three_groups">Request</string>
    <string-array name="listOneTitleProfile">
        <item>Nickname</item>
        <item>+48 731 468 217</item>
        <item>Jacek, 18 lat, przekladam tarcze, alkoholik.</item>
    </string-array>
    <string-array name="listOneSubtitleProfile">
        <item>User name</item>
        <item>Phone number</item>
        <item>Bio</item>
    </string-array>
    <string-array name="listTwoTitleProfile">
        <item>Notifications</item>
        <item>Security</item>
        <item>Themes and colors</item>
        <item>Languages</item>
        <item>Ask a question</item>
        <item>Help</item>
    </string-array>
</resources>