<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/mobile_nav_contacts"
        android:enabled="true"
        />

<!--    <item-->
<!--        android:id="@+id/groupsFragment"-->
<!--        android:icon="@drawable/ic_round_people_24"-->
<!--        android:title="@string/mobile_nav_groups"-->
<!--        android:enabled="true"/>-->

    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_round_mail_24"
        android:title="@string/mobile_nav_messages"
        android:enabled="true"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_account_circle_24"
        android:title="@string/mobile_nav_profile" />

</menu>