<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.bottomnavigation.contacts.ContactsFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/contacts_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_one_contacts" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab_online_contacts"
            android:text="@string/tab_two_contacts"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab_request_contacts"
            android:text="@string/tab_three_contacts"/>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/contacts_tab"/>

</RelativeLayout>