<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/onboarding_page1"
        android:layout_margin="32sp"
        android:layout_gravity="center"
        android:id="@+id/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_title_one"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs_description_one"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginTop="32sp"
            android:layout_marginLeft="32sp"
            android:layout_marginRight="32sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started_buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/obs_button"
            android:textSize="18sp"
            android:layout_marginTop="56sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:backgroundTint="@color/colorOrange"/>
    </LinearLayout>
    </LinearLayout>



</ScrollView>
