<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/messagesFragment">
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.kabasonic.messenger.ui.bottomnavigation.messages.MessagesFragment"
        android:label="@string/mobile_nav_messages"
        tools:layout="@layout/messages_fragment" >
        <action
            android:id="@+id/action_messagesFragment_to_OTPNumberFragment"
            app:destination="@id/OTPNumberFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.kabasonic.messenger.ui.bottomnavigation.contacts.ContactsFragment"
        android:label="@string/mobile_nav_contacts"
        tools:layout="@layout/contacts_fragment" />
    <fragment
        android:id="@+id/groupsFragment"
        android:name="com.kabasonic.messenger.ui.bottomnavigation.groups.GroupsFragment"
        android:label="@string/mobile_nav_groups"
        tools:layout="@layout/groups_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.kabasonic.messenger.ui.bottomnavigation.profile.ProfileFragment"
        android:label="@string/mobile_nav_profile"
        tools:layout="@layout/profile_fragment">
        <action
            android:id="@+id/action_profileFragment_to_OTPNumberFragment"
            app:popUpTo="@+id/profileFragment"
            app:popUpToInclusive="true"
            app:destination="@id/OTPNumberFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_profileFragment_to_editUsernameFragment"
            app:destination="@id/editUsernameFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_profileFragment_to_ediBioFragment"
            app:destination="@id/ediBioFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_profileFragment_to_editNicknameFragment"
            app:destination="@id/editNicknameFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/OTPNumberFragment"
        android:name="com.kabasonic.messenger.ui.authorization.otpnumber.OTPNumberFragment"
        android:label="Messenger"
        tools:layout="@layout/fragment_o_t_p_number" >
        <action
            android:id="@+id/action_OTPNumberFragment_to_OTPCodeFragment"
            app:destination="@id/OTPCodeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/OTPCodeFragment"
        android:name="com.kabasonic.messenger.ui.authorization.otpcode.OTPCodeFragment"
        android:label="Messenger"
        tools:layout="@layout/fragment_o_t_p_code" >
        <argument
            android:name="arg"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="Null" />
        <action
            android:id="@+id/action_OTPCodeFragment_to_messagesFragment"
            app:destination="@id/messagesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_OTPCodeFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <argument
            android:name="arg1"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.kabasonic.messenger.ui.registration.RegistrationFragment"
        android:label="Registration"
        tools:layout="@layout/registration_fragment" >
        <action
            android:id="@+id/action_registrationFragment_to_messagesFragment"
            app:destination="@id/messagesFragment" />
    </fragment>
    <fragment
        android:id="@+id/editUsernameFragment"
        android:name="com.kabasonic.messenger.ui.bottomnavigation.profile.editfragments.EditUsernameFragment"
        android:label="Edit Name" />
    <fragment
        android:id="@+id/ediBioFragment"
        android:name="com.kabasonic.messenger.ui.bottomnavigation.profile.editfragments.EdiBioFragment"
        android:label="Bio" />
    <fragment
        android:id="@+id/editNicknameFragment"
        android:name="com.kabasonic.messenger.ui.bottomnavigation.profile.editfragments.EditNicknameFragment"
        android:label="Nickname" />

</navigation>